Adicionando o Hateoas