@@ -1,5 +1,6 @@
 package com.github.restwithspringboot.services;
 
+import com.github.restwithspringboot.controller.PersonController;
 import com.github.restwithspringboot.dto.PersonDTO;
 import com.github.restwithspringboot.dtov2.PersonDTOV2;
 import com.github.restwithspringboot.exceptions.ResourceNotFoundException;
@@ -9,6 +10,9 @@ import com.github.restwithspringboot.model.Person;
 import com.github.restwithspringboot.repositories.PersonRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
+
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -21,21 +25,30 @@ public class PersonServices {
 
     public List<PersonDTO> findAll() {
         List<Person> people = repository.findAll();
-        return people.stream()
+
+        List<PersonDTO> listPersons =  people.stream()
                 .map(PersonMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+
+        listPersons.stream().forEach(p -> p.add(linkTo(methodOn(PersonController.class).findById(p.getKey())).withSelfRel()));
+
+        return listPersons;
     }
 
     public PersonDTO findById(Long id) {
         Person person = repository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("No records found for this ID"));
-        return PersonMapper.toDTO(person);
+        PersonDTO dto = PersonMapper.toDTO(person);
+        dto.add(linkTo(methodOn(PersonController.class).findById(id)).withSelfRel());
+        return dto;
     }
 
     public PersonDTO create (PersonDTO personDTO) {
         Person person = PersonMapper.toEntity(personDTO);
         Person savedPerson = repository.save(person);
-        return PersonMapper.toDTO(savedPerson);
+        PersonDTO dto = PersonMapper.toDTO(savedPerson);
+        dto.add(linkTo(methodOn(PersonController.class).findById(dto.getKey())).withSelfRel());
+        return dto;
     }
     public PersonDTOV2 createV2 (PersonDTOV2 personDTO) {
         Person person = PersonMapperV2.toEntity(personDTO);
@@ -44,7 +57,7 @@ public class PersonServices {
     }
 
     public PersonDTO update (PersonDTO personDTO){
-        Person person = repository.findById(personDTO.getId())
+        Person person = repository.findById(personDTO.getKey())
                 .orElseThrow(() -> new ResourceNotFoundException("No records found for this ID"));
         person.setFirstName(personDTO.getFirstName());
         person.setLastName(personDTO.getLastName());
@@ -52,7 +65,10 @@ public class PersonServices {
         person.setGender(personDTO.getGender());
 
         Person personUpdated = repository.save(person);
-        return PersonMapper.toDTO(personUpdated);
+        PersonDTO dto = PersonMapper.toDTO(personUpdated);
+
+        dto.add(linkTo(methodOn(PersonController.class).findById(dto.getKey())).withSelfRel());
+        return dto;
     }
     public void delete(Long id) {
         Person person = repository.findById(id)
